arreglo de cierres etiquetas meta

--- a/PROYECTO/ProyectoWeb1/web/index.xhtml
+++ b/PROYECTO/ProyectoWeb1/web/index.xhtml
@@ -9,28 +9,27 @@ and open the template in the editor.
     xmlns:h="http://xmlns.jcp.org/jsf/html">
   <h:head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <meta name="description" content="" />
+    <meta name="author" content="" />
 
     <title>Gallo Pinto Creative</title>
 
     <!-- Bootstrap core CSS -->
-    <h:outputStylesheet library="vendor/bootstrap/css/bootstrap.min.css">
-    <link >
+    <h:outputStylesheet library="vendor/bootstrap/css/bootstrap.min.css"/>
 
-    <!-- Custom fonts for this template -->
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css"/>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css"/>
-    <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'/>
-    <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'/>
-    <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'/>
-    <link rel="stylesheet" href="https://use.typekit.net/oag0fmw.css"/>
-    <link rel="stylesheet" href="https://use.typekit.net/oag0fmw.css"/>
-
-    <!-- Custom styles for this template -->
-    <link href="css/agency.css" rel="stylesheet" />
+    <!-- fuentes-->
+    <h:outputStylesheet library="vendor/fontawesome-free/css/all.min.css" />
+    <h:outputStylesheet library="https://fonts.googleapis.com/css?family=Montserrat:400,700" />
+    <h:outputStylesheet library="https://fonts.googleapis.com/css?family=Kaushan+Script" />
+    <h:outputStylesheet library="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic" />
+    <h:outputStylesheet library="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" />
+    <h:outputStylesheet library="https://use.typekit.net/oag0fmw.css" />
+    <h:outputStylesheet library="https://use.typekit.net/oag0fmw.css" />
+    
+    <!-- estilos -->
+    <h:outputStylesheet library="css/agency.css" />
   </h:head>
   <body id="page-top">
 
