cerrado etiqueta faltante

--- a/PROYECTO/ProyectoWeb1/web/index.xhtml
+++ b/PROYECTO/ProyectoWeb1/web/index.xhtml
@@ -156,7 +156,7 @@ and open the template in the editor.
                   <i class="fas fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt=""/>
             </a>
             <div class="portfolio-caption">
               <h4>Finish</h4>
