CERRADO DE ETIQUETAS EXRA

--- a/PROYECTO/ProyectoWeb1/web/index.xhtml
+++ b/PROYECTO/ProyectoWeb1/web/index.xhtml
@@ -170,7 +170,7 @@ and open the template in the editor.
                   <i class="fas fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt=""/>
             </a>
             <div class="portfolio-caption">
               <h4>Lines</h4>
@@ -265,7 +265,7 @@ and open the template in the editor.
               </li>
               <li class="timeline-inverted">
                 <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/about/4.jpg" alt="">
+                  <img class="rounded-circle img-fluid" src="img/about/4.jpg" alt=""/>
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
