--- a/PROYECTO/ProyectoWeb1/web/index_.xhtml
+++ b/PROYECTO/ProyectoWeb1/web/index_.xhtml
@@ -7,60 +7,9 @@ and open the template in the editor.
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
     xmlns:h="http://xmlns.jcp.org/jsf/html">
-  <h:head>
+  
+  <h:body id="page-top">
 
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <meta name="description" content="" />
-    <meta name="author" content="" />
-
-    <title>Gallo Pinto Creative</title>
-
-    <!-- Bootstrap core CSS -->
-    <h:outputStylesheet library="vendor/bootstrap/css/bootstrap.min.css"/>
-
-    <!-- fuentes-->
-    <h:outputStylesheet library="vendor/fontawesome-free/css/all.min.css" />
-    <h:outputStylesheet library="https://fonts.googleapis.com/css?family=Montserrat:400,700" />
-    <h:outputStylesheet library="https://fonts.googleapis.com/css?family=Kaushan+Script" />
-    <h:outputStylesheet library="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic" />
-    <h:outputStylesheet library="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" />
-    <h:outputStylesheet library="https://use.typekit.net/oag0fmw.css" />
-    <h:outputStylesheet library="https://use.typekit.net/oag0fmw.css" />
-    
-    <!-- estilos -->
-    <h:outputStylesheet library="css/agency.css" />
-  </h:head>
-  <body id="page-top">
-
-    <!-- Navigation -->
-    <nav class="tk-cheap-pine navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
-      <div class="container">
-        <a class="navbar-brand js-scroll-trigger tk-mr-eaves-xl-modern" href="#page-top">Contacto Creativo Internacional</a>
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <i class="fas fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav text-uppercase ml-auto">
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#productos">Servicios</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#galeria">Galeria</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">Nosotros</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#team">Equipo</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Contacto</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
 
     <!-- Header -->
     <header class="masthead">
@@ -459,7 +408,7 @@ and open the template in the editor.
       <div class="container">
         <div class="row">
           <div class="col-md-4">
-            <span class="copyright">Copyright &copy; Your Website 2018</span>
+            <span class="copyright">Copyright Global Node y CCI 2018</span>
           </div>
           <div class="col-md-4">
             <ul class="list-inline social-buttons">
@@ -699,22 +648,7 @@ and open the template in the editor.
         </div>
       </div>
     </div>
-
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Plugin JavaScript -->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-
-    <!-- Contact form JavaScript -->
-    <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me.js"></script>
-
-    <!-- Custom scripts for this template -->
-    <script src="js/agency.min.js"></script>
-
-  </body>
+  </h:body>
 
 </html>
 
