--- a/PROYECTO/ProyectoWeb1/web/stock.xhtml
+++ b/PROYECTO/ProyectoWeb1/web/stock.xhtml
@@ -3,31 +3,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
-
     <h:head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <meta charset="utf-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-    <title>Gallo Pinto Creative</title>
-
-    <!-- Bootstrap core CSS -->
-    <h:outputStylesheet library="css" name="vendor/bootstrap/css/bootstrap.min.css"/>
-
-    <!-- fuentes-->
-    <h:outputStylesheet library="css" name="vendor/fontawesome-free/css/all.min.css" />
-    <h:outputStylesheet library="https://fonts.googleapis.com/css?family=Montserrat:400,700" />
-    <h:outputStylesheet library="https://fonts.googleapis.com/css?family=Kaushan+Script" />
-    <h:outputStylesheet library="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic" />
-    <h:outputStylesheet library="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" />
-    <h:outputStylesheet library="https://use.typekit.net/oag0fmw.css" />
-    <h:outputStylesheet library="https://use.typekit.net/oag0fmw.css" />
-    
-    <!-- estilos -->
-    <h:outputStylesheet library="css/agency.css" />
-  </h:head>
-
+        <ui:insert name="metatags">metatags</ui:insert>
+        <ui:insert name="title">Title</ui:insert>
+    </h:head>
     <h:body>
 
         <div id="top">
