--- a/PROYECTO/ProyectoWeb1/web/stock.xhtml
+++ b/PROYECTO/ProyectoWeb1/web/stock.xhtml
@@ -31,16 +31,16 @@
               <a class="nav-link js-scroll-trigger" href="#servicios"></a>
             </li>
             <li class="nav-item">
-                <h:outputLink styleClass="nav-link js-scroll-trigger" value="productos">Productos</h:outputLink>
+              <h:outputLink styleClass="nav-link js-scroll-trigger" value="productos">Productos</h:outputLink>
             </li>
             <li class="nav-item">
               <h:outputLink styleClass="nav-link js-scroll-trigger" value="nosotros">Nosotros</h:outputLink>
             </li>
             <li class="nav-item">
-                <h:outputLink styleClass="nav-link js-scroll-trigger" value="#team">Equipo</h:outputLink>
+              <h:outputLink styleClass="nav-link js-scroll-trigger" value="#team">Equipo</h:outputLink>
             </li>
             <li class="nav-item">
-                <h:outputLink styleClass="nav-link js-scroll-trigger" value="#contact">Contacto</h:outputLink>
+              <h:outputLink styleClass="nav-link js-scroll-trigger" value="contact.jsp">Contacto</h:outputLink>
             </li>
           </ul>
         </div> 
