--- a/PROYECTO/ProyectoWeb1/web/productos.xhtml
+++ b/PROYECTO/ProyectoWeb1/web/productos.xhtml
@@ -22,7 +22,7 @@
         <div class="row">
           <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="" />
+                <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt=""></img>
               <h4>Kay Garland</h4>
               <p class="text-muted">Lead Designer</p>
               <ul class="list-inline social-buttons">
@@ -46,7 +46,7 @@
           </div>
           <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="" />
+                <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="" ></img>
               <h4>Larry Parker</h4>
               <p class="text-muted">Lead Marketer</p>
               <ul class="list-inline social-buttons">
